# libs

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
include/voidmare/: libs.h
include/voidmare/libs/: result.h  slice.h
src/: slice.c
tests/: CMakeLists.txt  main.c
